# Constraint-Aware-Hierarchical-Search-

./: .env.example  .gitignore  README.md  pyproject.toml
data/: Dual-Use List.xlsx  Educational Equipment.xlsx  HS-Simple.xlsx  Hs-Hard.xlsx  requirements.txt  品目注释测试-sample.xlsx
docs/: answer-generation.md  llm-candidate-selection.md  query-compression.md  tree-construction.md
input/: chunk_0001_0001-0001.txt  chunk_0002_0002-0002.txt  chunk_0003_0003-0003.txt  chunk_0004_0004-0004.txt  chunk_0005_0005-0005.txt  chunk_0006_0006-0007.txt  chunk_0007_0008-0009.txt  chunk_0008_0010-0011.txt  chunk_0009_0012-0012.txt  chunk_0010_0013-0016.txt  chunk_0011_0017-0022.txt  chunk_0012_0023-0035.txt  chunk_0013_0036-0041.txt  chunk_0014_0042-0047.txt  chunk_0015_0048-0048.txt  chunk_0016_0049-0051.txt  chunk_0017_0052-0059.txt  chunk_0018_0060-0066.txt  chunk_0019_0067-0072.txt  chunk_0020_0073-0077.txt  chunk_0021_0078-0083.txt  chunk_0022_0084-0093.txt  chunk_0023_0094-0098.txt  chunk_0024_0099-0103.txt  chunk_0025_0104-0104.txt  chunk_0026_0105-0119.txt  chunk_0027_0120-0120.txt  chunk_0028_0121-0126.txt  chunk_0029_0127-0131.txt  chunk_0030_0132-0134.txt  chunk_0031_0135-0140.txt  chunk_0032_0141-0148.txt  chunk_0033_0149-0155.txt  chunk_0034_0156-0162.txt  chunk_0035_0163-0168.txt  chunk_0036_0169-0172.txt  chunk_0037_0173-0173.txt  chunk_0038_0174-0189.txt  chunk_0039_0190-0198.txt  chunk_0040_0199-0208.txt  (+131 more)
regtree_agent/: __init__.py  config.py  online.py  prompts.py  rules.py  search.py  tree_index.py
scripts/: analyze_and_write_rules.py  build_index.py  (+2 more)
(+3 files in other folders)
