[project]
name = "regtree-agent"
version = "0.1.0"
description = "RegTree 法规/税则检索实验项目"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
]

[project.scripts]
regtree-cli = "scripts.regtree_cli:main"
regtree-build = "scripts.build_index:main"
regtree-query = "scripts.query_index:main"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
